--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,3 +1,16 @@
+@article{bezanson2017julia,
+  title = {Julia: A fresh approach to numerical computing},
+  author = {Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B.},
+  journal = {SIAM Review},
+  volume = {59},
+  number = {1},
+  pages = {65--98},
+  year = {2017},
+  publisher = {SIAM},
+  doi = {10.1137/141000671},
+  url = {https://epubs.siam.org/doi/10.1137/141000671}
+}
+
 @article{RevModPhys.78.275,
   title = {The kernel polynomial method},
   author = {Weisse, Alexander and Wellein, Gerhard and Alvermann, Andreas and Fehske, Holger},
