--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -159,3 +159,56 @@
   doi = {10.1103/PhysRevLett.127.277204},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.127.277204}
 }
+
+
+@article{Chou2020,
+  title = {Magic-angle semimetals with chiral symmetry},
+  author = {Chou, Yang-Zhi and Fu, Yixing and Wilson, Justin H. and K\"onig, E. J. and Pixley, J. H.},
+  journal = {Phys. Rev. B},
+  volume = {101},
+  issue = {23},
+  pages = {235121},
+  numpages = {22},
+  year = {2020},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.101.235121},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.101.235121}
+}
+
+@article{wu2025electronic,
+  title={Electronic anisotropy and rotational symmetry breaking at a Weyl semimetal/spin ice interface},
+  author={Wu, Tsung-Chi and Chang, Yueqing and Wu, Ang-Kun and Terilli, Michael and Wen, Fangdi and Kareev, Mikhail and Choi, Eun Sang and Graf, David and Zhang, Qinghua and Gu, Lin and others},
+  journal={Science Advances},
+  volume={11},
+  number={24},
+  pages={eadr6202},
+  year={2025},
+  publisher={American Association for the Advancement of Science},
+  url={https://www.science.org/doi/full/10.1126/sciadv.adr6202}
+}
+
+@article{wu2020berry,
+  title = {Berry phase manipulation in ultrathin ${\mathrm{SrRuO}}_{3}$ films},
+  author = {Wu, Liang and Wen, Fangdi and Fu, Yixing and Wilson, Justin H. and Liu, Xiaoran and Zhang, Yujun and Vasiukov, Denis M. and Kareev, Mikhail S. and Pixley, J. H. and Chakhalian, Jak},
+  journal = {Phys. Rev. B},
+  volume = {102},
+  issue = {22},
+  pages = {220406},
+  numpages = {6},
+  year = {2020},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.102.220406},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.102.220406}
+}
+
+@incollection{skilling1988axioms,
+  title={The axioms of maximum entropy},
+  author={Skilling, John},
+  booktitle={Maximum-Entropy and Bayesian Methods in Science and Engineering: Foundations},
+  pages={173--187},
+  year={1988},
+  publisher={Springer},
+  url={https://link.springer.com/content/pdf/10.1007/978-94-009-3049-0_8?pdf=chapter+toc}
+}
